# server

./: Cargo.toml  README.md
src/: init.rs  lib.rs  main.rs  root.rs
src/api/: mod.rs
src/api/structs/: errors.rs  mod.rs  stats.rs
src/api/user/: mod.rs
src/api/user/accounts/: changeemail.rs  changepassword.rs  create.rs  delete.rs  login.rs  mod.rs  rename.rs  verify.rs
src/api/v1/: mod.rs  stats.rs
src/api/v1/accounts/: changeemail.rs  changepassword.rs  create.rs  delete.rs  login.rs  mod.rs  rename.rs  responses.rs  verify.rs
src/api/v1/utils/: request_proxy.rs
src/global/functions/: encryption.rs
src/global/structs/: account.rs  errors.rs  mod.rs  verification.rs
src/tests/: accounts.rs  mod.rs  verification.rs
src/utils/: mod.rs  request_proxy.rs
storage/stats/: lifetime.json
