[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
html-escape = "0.2"
log = "0.4"
reqwest = "0.11"
chrono = "0.4"
futures-util = "0.3"
env_logger = "0.9"
dotenv = "0.15"
sha2 = "0.10"
aes-gcm-siv = "0.11"
hex = "0.4"
rand = "0.8"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
